# k8s-job-webhooks

./: .env  Cargo.toml  Dockerfile  README.md  job-family-config.yaml  k8s-job-done-webhooks-open-api.yaml
k8s/: cronjob.yaml  job.yaml  k8s-job-monitor-deployment.yaml  k8s-job-monitor-service.yaml  role-binding.yaml  role.yaml
migrations/sqlite/: 20241020171128_k8s-job-webhooks.sql  20241021112530_job_done_trigger_webhooks_timeout_trigger.sql  20241022192749_job-watcher-family.sql  20241027211424_indexes.sql
queries/sqlite/: find_all_job_family_watchers_by_job_family.sql  find_all_watchers.sql  find_all_watchers_by_job_name_and_status.sql  find_all_webhooks.sql  find_watcher_by_id.sql  find_webhook_by_id.sql  insert_job_done_watcher.sql  insert_job_family_watcher.sql  update_watcher_status.sql  update_watcher_status_by_status.sql  update_watchers_status_by_job_name_and_status.sql
src/: controller.rs  k8s_job_watcher.rs  lib.rs  main.rs  models.rs  monitors.rs  repository.rs  service.rs  setup.rs
src/controller/: job_done_watchers.rs  webhooks.rs
src/models/: api.rs  entity.rs  service.rs
src/models/service/: http_url.rs  job_name.rs
src/repository/: job_done_watchers.rs  job_family_watcher.rs  webhooks.rs
src/service/: job_done_watchers.rs  job_family_watcher.rs  k8s_job_watcher.rs  webhooks.rs
