[package]
name = "k8s-cronjob-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures-util = "0.3.31"
actix-web = "4"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.32.1"
openssl = { version = "0.10.66", features = ["vendored"] }
