[package]
name = "k8s-job-webhooks"
authors = ["Vincenzo Tramo <vv.tramo@gmail.com>"]
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures-util = "0.3.31"
actix-web = "4"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.32.1"
openssl = { version = "0.10.66", features = ["vendored"] }
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
url = "2.5.2"
moka = { version = "0.12.8", features = ["sync"]}
once_cell = "1.20.2"
async-trait = "0.1.83"
async-rwlock = "1.3.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "chrono", "postgres", "mysql", "time"] }
anyhow = "1.0.90"
env_logger = "0.11.5"
log = "0.4.22"
